@@ -38,7 +38,7 @@ public class OptionalMaxPageValidator implements ConstraintValidator<MaxPageable
                 && value.get().getSize() <= maxValue;
         if (!isValid) {
             context.disableDefaultConstraintViolation();
-            context.buildConstraintViolationWithTemplate("Cannot exceed maximum page size: %s".formatted(maxValue))
+            context.buildConstraintViolationWithTemplate(String.format("Cannot exceed maximum page size: %s", maxValue))
                     .addConstraintViolation();
         }
         return isValid;
